[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/WaveHandler/WaveHandler.gd" type="Script" id=1]

[node name="WaveHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="WaveTimer" type="Timer" parent="."]
[connection signal="timeout" from="WaveTimer" to="." method="_on_Timer_timeout"]
